--- a/Unity/Packages/manifest.json
+++ b/Unity/Packages/manifest.json
@@ -4,7 +4,8 @@
     "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.render-pipelines.universal": "12.1.12",
+    "com.unity.mathematics": "1.2.6",
+    "com.unity.render-pipelines.universal": "12.1.9",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
